--- a/step_definitions/Steps_Load_Feature_Files.cls
+++ b/step_definitions/Steps_Load_Feature_Files.cls
@@ -2,7 +2,7 @@ VERSION 1.0 CLASS
 BEGIN
   MultiUse = -1  'True
 END
-Attribute VB_Name = "Steps_Import_Feature_Files"
+Attribute VB_Name = "Steps_Load_Feature_Files"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
@@ -10,7 +10,7 @@ Attribute VB_Exposed = False
 Option Explicit
 
 'separate tags by comma, e.g.: "wip,debug,production"
-Const cTags = "wip"
+Const cTags = ""
 Dim m_description As String
 
 'module variables used for steps
@@ -22,7 +22,7 @@ Public Property Get Description() As String
     
     If m_description = vbNullString Then
         m_description = "Senfgurke will import examples from feature files" & vbLf _
-                            & "containing feature name and descripion, rules and examples as text."
+                            & "containing feature name and description, rules and examples as text."
     End If
     Description = m_description
 End Property
@@ -60,7 +60,8 @@ Public Property Get Examples() As Collection
     examples_list.Add example
 
 ' TODO
-'    example = Array("Rule: return error message if feature files are not accessible")
+    example = Array("Rule: return error message if feature files are not accessible")
+    examples_list.Add example
 '    example = Array("Example: feature dir is unavailable", _
 '                        "Given feature dir is set to ""/this/path/does/not/exist/features""", _
 '                        "When senfgurke reads features from feature dir", _
