--- a/step_definitions/Support_Test_Feature_Class.cls
+++ b/step_definitions/Support_Test_Feature_Class.cls
@@ -16,12 +16,12 @@ Const cTags = ""
 
 Dim m_description As String
 
-Public Property Get Description() As String
+Public Property Get description() As String
     
     If m_description = vbNullString Then
         m_description = "sample feature object for testing the framework"
     End If
-    Description = m_description
+    description = m_description
 End Property
 
 Public Sub test_examples()
@@ -57,7 +57,7 @@ Public Function run_step(pcolStepProps As Collection) As Variant
     Exit Function
 
 error_handler:
-    run_step = TFeature.fail_step(Err.Number, Err.Description)
+    run_step = TFeature.fail_step(Err.Number, Err.description)
 End Function
 
 Public Sub before()
@@ -76,6 +76,6 @@ Private Sub pending(pending_msg)
     TFeature.pending pending_msg
 End Sub
 
-Public Property Let Description(ByVal new_description As String)
+Public Property Let description(ByVal new_description As String)
     m_description = new_description
 End Property
