--- a/source/TStepsTemplate.cls
+++ b/source/TStepsTemplate.cls
@@ -2,11 +2,13 @@ VERSION 1.0 CLASS
 BEGIN
   MultiUse = -1  'True
 END
-Attribute VB_Name = "Steps_Run_Tests"
+Attribute VB_Name = "TStepsTemplate"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
+'this is a template for new example driven tests
+
 Option Explicit
 
 'separate tags by comma, e.g.: "wip,debug,production"
@@ -16,8 +18,8 @@ Dim m_description As String
 Public Property Get Description() As String
     
     If m_description = vbNullString Then
-        m_description = "The main purpose of senfgurke is to run tests containing" & vbLf _
-                            & "numerous examples used to describe distinct features."
+        m_description = "Add a description" & vbLf _
+                            & "to explain your features purpose."
     End If
     Description = m_description
 End Property
@@ -29,14 +31,14 @@ Public Property Get Examples() As Collection
     Dim example As Variant
 
     Set examples_list = New Collection
-    example = Array("Rule: stop execution when the import of feature files fails")
+    example = Array("Rule: specify a rule to classify the following examples_list")
     examples_list.Add example
-'    example = Array("Example: import results with error message", _
-'                        "Given ", _
-'                        "When  ", _
-'                        "Then  ")
-'    examples_list.Add example
-
+    example = Array("Example: add a headline to identify this example", _
+                        "Given a precondition", _
+                        "And another precondition", _
+                        "When any action happens", _
+                        "Then some result is expected")
+    examples_list.Add example
     Set Examples = examples_list
 End Property
 
@@ -44,7 +46,7 @@ Public Function run_step(step_definition As Collection) As Variant
     
     On Error GoTo error_handler
     
-    Select Case step_definition.Item(TExampleRunner_Old.ATTR_STEP_HEAD) & " " & step_definition.Item(TExampleRunner_Old.ATTR_STEP_BODY)
+    Select Case step_definition.Item(ATTR_STEP_HEAD) & " " & step_definition.Item(TExampleRunner_Old.ATTR_STEP_BODY)
         
         Case "Given a precondition"
            
@@ -83,7 +85,3 @@ End Sub
 Public Property Let Description(ByVal new_description As String)
     m_description = new_description
 End Property
-
-
-
-
